# mlops-assignment

./: README.md
.devcontainer/: devcontainer.json
IT3385_Used_Car/processed/: cleaned_used_car_data.csv
app/: app.py  app_streamlit.py  packages.txt  requirements.txt
app/templates/: base.html  dekais_app.html  index.html  jet.html  xinrui.html
common/: README.md  dvc.yaml  pyproject.toml
dekai/app/: app.py  app_flask.py  final_melbourne_model.pkl  requirements.txt
dekai/app/templates/: dekais_app.html
dekai/data_raw/: 01_Melbourne_Residential.csv
dekai/models/: Dekai_Melbourne_Residential_price_predictions.pkl
dekai/notebooks/: Data_Processing.ipynb  Modelling.ipynb
dekai/processed/: test.csv  train.csv
dekai/src/: config.yaml  final_training.py  preprocess.py  train.py  train_without_mlflow.py  training_logs.txt  training_logs_without_mlflow.txt
jet/app/: app.py  requirements.txt  streamlit_app.py
jet/app/templates/: index.html
jet/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
jet/catboost_info/learn/: events.out.tfevents
jet/data/raw/: 02_Used_Car_Prices.xlsx
jet/notebooks/: Task_1.ipynb  Task_2.ipynb
jet/src/: config.yaml  preprocess.py  train.py  training_logs.txt
xinrui/app/: app.py  app_forstreamlit.py  final_wheat_seeds_model.pkl  requirements.txt
xinrui/app/templates/: index.html
xinrui/models/: final_wheat_seeds_model.pkl
xinrui/notebooks/: Task 1.ipynb  Task 2 .ipynb
xinrui/processed/: test.csv  train.csv
xinrui/src/: Evaluate.py  config.yaml  preprocess.py  train.py  training_logs.txt
(+50 files in other folders)
