[tool.poetry]
name = "mlops-assignment"
version = "0.1.0"
description = "MLOps pipeline for multiple ML models (Wheat Seeds, Used Cars, Melbourne Houses)"
authors = ["dekai", "xinrui", "jet"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.3"
numpy = "^1.23.5"
scikit-learn = "^1.2.1"
pycaret = "^3.0"
hydra-core = "^1.3.2"
flask = "^2.2.3"
dvc = "^2.10.0"
openpyxl = "^3.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
